[gd_scene load_steps=6 format=3 uid="uid://xf8416e8oopm"]

[ext_resource type="Script" path="res://Scripts/menu_pause.gd" id="1_fsu42"]
[ext_resource type="FontFile" uid="uid://blec7eldd6yq" path="res://Assets/daydream_3/Daydream.ttf" id="2_yttim"]

[sub_resource type="Theme" id="Theme_e6ksx"]
Button/fonts/font = ExtResource("2_yttim")

[sub_resource type="InputEventAction" id="InputEventAction_n8e4l"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_c87vs"]
events = [SubResource("InputEventAction_n8e4l")]

[node name="Menu_Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fsu42")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_e6ksx")

[node name="Resume__Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.698039, 0, 0.105882, 1)
theme_override_colors/font_focus_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/font_disabled_color = Color(1, 0.14902, 0.113725, 1)
theme_override_font_sizes/font_size = 16
shortcut = SubResource("Shortcut_c87vs")
text = "Resume"

[node name="Menu_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.698039, 0, 0.105882, 1)
theme_override_colors/font_focus_color = Color(1, 0.14902, 0.113725, 1)
theme_override_colors/font_disabled_color = Color(1, 0.14902, 0.113725, 1)
theme_override_font_sizes/font_size = 16
text = "BAck to Menu"

[connection signal="pressed" from="VBoxContainer/Resume__Button" to="." method="_on_resume__button_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu_Button" to="." method="_on_menu_button_pressed"]
